Changes to be committed: 	modified:   pom.xml